--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,6 +5,8 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  width: 6%;
+  height: 6%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -14,18 +16,11 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  margin-top: 80px; /* Para dar espacio a la barra de menú fija */
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+  align-items: center;
+  height: 100vh;
 }
 
 @keyframes App-logo-spin {
@@ -36,3 +31,39 @@
     transform: rotate(360deg);
   }
 }
+
+/* Asegúrate de que estos estilos sean parte de tu App.css */
+
+.BarraSuperiorFlotante {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #282c34;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px 0;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
+
+.BarraSuperiorFlotante button {
+  background-color: #61dafb;
+  color: #282c34;
+  border: none;
+  padding: 10px 20px;
+  margin: 0 10px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.BarraSuperiorFlotante button:hover {
+  background-color: #21a1f1;
+}
+
+
+
+
+/* Agrega otros estilos aquí si es necesario */
